@@ -27,37 +27,34 @@ import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.order.server.entity.OrderTimeType;
 import com.echothree.model.data.order.server.entity.OrderType;
 import com.echothree.model.data.order.server.factory.OrderTimeTypeFactory;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetOrderTimeTypesCommand
-        extends BaseMultipleEntitiesCommand<OrderTimeType, GetOrderTimeTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<OrderTimeType, GetOrderTimeTypesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.OrderTimeType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("OrderTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetOrderTimeTypesCommand */
@@ -68,12 +65,30 @@ public class GetOrderTimeTypesCommand
     OrderType orderType;
 
     @Override
-    protected Collection<OrderTimeType> getEntities() {
+    protected void handleForm() {
+        var orderTypeName = form.getOrderTypeName();
+
+        orderType = OrderTypeLogic.getInstance().getOrderTypeByName(this, orderTypeName);
+    }
+
+    @Override
+    protected Long getTotalEntities() {
         var orderTimeControl = Session.getModelController(OrderTimeControl.class);
 
-        orderType = OrderTypeLogic.getInstance().getOrderTypeByName(this, form.getOrderTypeName());
+        return hasExecutionErrors() ? null : orderTimeControl.countOrderTimeTypes(orderType);
+    }
 
-        return hasExecutionErrors() ? null : orderTimeControl.getOrderTimeTypes(orderType);
+    @Override
+    protected Collection<OrderTimeType> getEntities() {
+        Collection<OrderTimeType> orderTimeTypes = null;
+
+        if(!hasExecutionErrors()) {
+            var orderTimeControl = Session.getModelController(OrderTimeControl.class);
+
+            orderTimeTypes = orderTimeControl.getOrderTimeTypes(orderType);
+        }
+
+        return orderTimeTypes;
     }
 
     @Override
@@ -83,13 +98,14 @@ public class GetOrderTimeTypesCommand
         if(entities != null) {
             var orderTypeControl = Session.getModelController(OrderTypeControl.class);
             var orderTimeControl = Session.getModelController(OrderTimeControl.class);
+            var userVisit = getUserVisit();
 
             if(session.hasLimit(OrderTimeTypeFactory.class)) {
-                result.setOrderTimeTypeCount(orderTimeControl.countOrderTimeTypes(orderType));
+                result.setOrderTimeTypeCount(getTotalEntities());
             }
 
-            result.setOrderType(orderTypeControl.getOrderTypeTransfer(getUserVisit(), orderType));
-            result.setOrderTimeTypes(orderTimeControl.getOrderTimeTypeTransfers(getUserVisit(), entities));
+            result.setOrderType(orderTypeControl.getOrderTypeTransfer(userVisit, orderType));
+            result.setOrderTimeTypes(orderTimeControl.getOrderTimeTypeTransfers(userVisit, entities));
         }
 
         return result;
